--- a/WRR-Reserv/WRR-Reserv/Components/_Imports.razor
+++ b/WRR-Reserv/WRR-Reserv/Components/_Imports.razor
@@ -7,7 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using WRR_Reserv
-@using WRR_Reserv.Client
 @using WRR_Reserv.Components
 
 @using WRRManagement.Domain.RoomTypes
@@ -15,3 +14,5 @@
 @using WRRManagement.Domain.APIModels
 
 @using WRR_Reserv.Models
+@using WRR_Reserv.Services
+@using WRR_Reserv.Components.Shared
