--- a/WRR-Reserv/WRR-Reserv/Components/App.razor
+++ b/WRR-Reserv/WRR-Reserv/Components/App.razor
@@ -9,9 +9,13 @@
     <script src="https://kit.fontawesome.com/9e38935786.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' id='fontawesome-css' href='https://use.fontawesome.com/releases/v5.11/css/all.css' type='text/css' media='all' />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    
     <link rel="stylesheet" href="sb-admin-2.css" />
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link href="~/bootstrap/bootstrap-grid.min.css" rel="stylesheet" />
+    <link href="~/jquery-ui.css" rel="stylesheet" />
+    <link href="~/jquery-ui.structure.css" rel="stylesheet" />
+    <link href="~/jquery-ui.theme.css" rel="stylesheet" />
     <link rel="stylesheet" href="/wrr-reserv.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
@@ -20,7 +24,13 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.showModal = function (id) {
+            var modal = new bootstrap.Modal(document.getElementById(id));
+            modal.show();
+        };
+    </script>
 </body>
 
 </html>
