--- a/WRR-Reserv/WRR-Reserv/wwwroot/wrr-reserv.css
+++ b/WRR-Reserv/WRR-Reserv/wwwroot/wrr-reserv.css
@@ -393,4 +393,120 @@ a {
     padding: .3rem 0rem;
 }
 
+table.smalltbl{
+    max-width: 300px;
+}
+
+img.main-amenity{
+    max-height: 300px;
+}
+
+span.discount-strike {
+    color: red;
+    text-decoration: line-through;
+}
+span.discount-text{
+    color: black;
+    padding-right: .5rem;
+}
+
+.table {
+    --bs-table-bg: transparent;
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: #212529;
+    --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-table-active-color: #212529;
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: #212529;
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+    vertical-align: middle;
+    border-color: #dee2e6;
+}
+
+    .table > :not(caption) > * > * {
+        padding: 0.5rem;
+        background-color: var(--bs-table-bg);
+        border-bottom-width: 1px;
+        box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+    }
+
+    .table > tbody {
+        vertical-align: inherit;
+    }
+
+    .table > thead {
+        vertical-align: bottom;
+    }
+
+    .table > :not(:last-child) > :last-child > * {
+        border-bottom-color: #dee2e6;
+    }
+
+.caption-top {
+    caption-side: top;
+}
+
+.table-sm > :not(caption) > * > * {
+    padding: 0.25rem;
+}
+
+.table-bordered > :not(caption) > * {
+    border-width: 1px 0;
+}
+
+    .table-bordered > :not(caption) > * > * {
+        border-width: 0 1px;
+    }
+
+.table-borderless > :not(caption) > * > * {
+    border-bottom-width: 0;
+}
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+    --bs-table-accent-bg: var(--bs-table-striped-bg);
+    color: var(--bs-table-striped-color);
+}
+
+.table-active {
+    --bs-table-accent-bg: var(--bs-table-active-bg);
+    color: var(--bs-table-active-color);
+}
+
+.table-hover > tbody > tr:hover {
+    --bs-table-accent-bg: var(--bs-table-hover-bg);
+    color: var(--bs-table-hover-color);
+}
+
+/* Responsive Tables */
+.table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.table-striped td.header {
+    background: rgba(0, 0, 0, 0.05);
+    text-align: left;
+    padding: 0px;
+}
+
+.table-striped td {
+    padding: 0.5rem;
+    vertical-align: middle;
+    border-bottom: 1px solid #e3e6f0;
+    background-color: transparent;
+    text-align: left;
+    font-weight: normal;
+    font-size: 14px;
+}
+
+.table-cartCalculate {
+    width: 240px;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: left;
+}
+
 
